# APILLM

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  findings.md  progress.md  pyproject.toml  task_plan.md
.deepseek/state/: subagents.v1.json
.github/workflows/: ci.yml
Web/: README.md  index.html  test_verify.py
Web/css/: style.css
Web/js/: api.js  app.js
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_add_pricing_config.py  c3d4e5f6a7b8_add_auth_and_config_tables.py  f321205629d4_init.py
app/: main.py
app/api/: admin.py  auth.py  deps.py  health.py  user.py
app/core/: config.py  exceptions.py  logging.py
app/db/: base.py  models.py
app/schemas/: anthropic.py  auth.py  openai.py
app/services/: auth.py  health_checker.py  jwt.py  price_fetcher.py  pricing_sync.py  redis.py  router.py
design-system/apillm-relay/: MASTER.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.scss
logs_75078465010/: 0_lint-and-test.txt
logs_75078465010/lint-and-test/: 1_Set up job.txt  25_Post Checkout code.txt  26_Stop containers.txt  27_Complete job.txt  2_Initialize containers.txt  3_Checkout code.txt  4_Set up Python.txt  5_Cache dependencies.txt  6_Install dependencies.txt  7_Lint with ruff.txt  system.txt
logs_75079130106/: 0_lint-and-test.txt
logs_75079130106/lint-and-test/: 14_Stop app server.txt  (+15 more)
scripts/: _check_user.py  _test_login.py  ci_helpers.py  create_user.py  healthcheck.py  seed_pricing.sql  smoke_test.py  smoke_test_phase2.py  sync_pricing.py
tests/: conftest.py  test_api.py  test_auth.py  test_health_checker.py  test_jwt.py  test_models.py  test_price_fetcher.py  test_pricing_sync.py  test_redis.py  test_router.py
(+60 files in other folders)
